--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "generate": true
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.14.3",
+    "@clerk/nextjs": "^6.19.1",
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.6.0",
     "@radix-ui/react-dialog": "^1.1.7",
@@ -29,11 +29,11 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.488.0",
-    "next": "15.3.0",
+    "next": "^15.3.0",
     "next-themes": "^0.4.6",
     "prisma": "^6.6.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-hook-form": "^7.55.0",
     "react-hot-toast": "^2.5.2",
     "react-spinners": "^0.17.0",
